swagger.json Update and a few more small fixes
